Revision history for Perl extension Finance::Bank::IE::PermanentTSB.

0.05
    - account_statement() prototype has been changed
    - account type constants have been introduced

0.04 Sun Jan 25 23:40:00 GMT 2009
    - minor changes

0.03 Sun Jan 25 01:41:41 GMT 2009
    - implemented function account_statement()
    - perlpod documentation improved
    - starting migration to git

0.02  Wed Jan 21 15:19:23 GMT 2009
    - check_balance implemented

0.01  Thu Jan 15 14:58:59 2009
	- original version; created by h2xs 1.23 with options
		-AX Finance::Bank::IE::PermanentTSB
