@@ -5,4 +5,5 @@ README
 t/Finance-Bank-IE-PermanentTSB.t
 lib/Finance/Bank/IE/PermanentTSB.pm
 META.yml                                 Module meta-data (added by MakeMaker)
-templates/gnuplot_print.gp
+lib/Finance/Bank/IE/templates/gnuplot_print.gp
+ptsb
