@@ -3,7 +3,6 @@ old
 Makefile
 Makefile.old
 notes
-TODO
 blib
 .cvsignore
 .*\.swp
