@@ -1,7 +1,7 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Finance-Bank-IE-PermanentTSB
-version:      0.02
+version:      0.04
 version_from: lib/Finance/Bank/IE/PermanentTSB.pm
 installdirs:  site
 requires:
