@@ -2,6 +2,7 @@ use strict;
 use warnings;
 use ExtUtils::MakeMaker;
 
+
 WriteMakefile(
     NAME              => 'Finance::Bank::IE::PermanentTSB',
     VERSION_FROM      => 'lib/Finance/Bank/IE/PermanentTSB.pm', # finds $VERSION
@@ -12,6 +13,8 @@ WriteMakefile(
     }, 
     ABSTRACT_FROM  => 'lib/Finance/Bank/IE/PermanentTSB.pm',
     AUTHOR         => 'Angelo "pallotron" Failla <pallotron@freaknet.org>',
+    EXE_FILES      => [qw(ptsb )],
+    PL_FILES       => { },
     dist           => { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
-    clean          => { FILES => 't/tmp Makefile.old' },
+    clean          => { FILES => qw(t/tmp *.html) },
 );
