@@ -3,6 +3,9 @@ Revision history for Perl extension Finance::Bank::IE::PermanentTSB.
 0.05
     - account_statement() prototype has been changed
     - account type constants have been introduced
+    - created CLI utility called ptsb that can be
+      used by a user to interact with his/her homebanking
+      account. this is still working in progress...
 
 0.04 Sun Jan 25 23:40:00 GMT 2009
     - minor changes
